# MVwifiAuto

./: .gitignore  DEVLOG.md  README.md  install.sh  pyproject.toml
android/: MVwifiAuto.prj.xml  portal_curl.sh
docs/: android-devlog.md  architecture.md  tasker-android-setup.md  troubleshooting.md
src/mvwifi_auto/: __init__.py  captive_portal.py  cli.py  controller.py  network_manager.py
systemd/: mvwifi-auto-resume.service  mvwifi-auto.service
tests/: __init__.py  conftest.py  test_captive_portal.py  test_controller.py  test_network_manager.py
